--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: auto;
+  width: 100%;
+  background-color: #D8D8D8;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
   text-align: center;
+  padding: 40px;
+  color: rgb(19, 19, 156);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  line-height: 1.8;
+  text-align: center;
+  padding-left: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-div {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.employee-card {
+  padding: 30px;
+  text-align: center;
+  font-size: 14px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.employee-card>p {
+  padding: 2px;
+}
+
+.employee-span {
+  font-weight: bold;
+}
+
+.employee-image {
+  height: auto;
+  width: 160px;
+  border-radius: 8px;
 }
